Add Colab demo link

--- a/colab_demo_t2i.ipynb
+++ b/colab_demo_t2i.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install diffusers transformers accelerate peft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "from diffusers import StableDiffusionXLPipeline\n",
     "from scheduling_tcd import TCDScheduler "
